checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000125480.8e73d15569f5a0577a8fa73f87817b476f68864f
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#29: 
> kernel-2.6.15-rc5-rt2 - compilation error ¡RWSEM_ACTIVE_BIAS¢ undeclared
                                            ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#38: 
> lib/rwsem.c: In function ¡__rwsem_do_wake¢:
                           ^

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#39: 
> lib/rwsem.c:57: warning: implicit declaration of function ¡rwsem_atomic_update¢

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#39: 
> lib/rwsem.c:57: warning: implicit declaration of function ¡rwsem_atomic_update¢
                                                            ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#40: 
> lib/rwsem.c:57: error: ¡RWSEM_ACTIVE_BIAS¢ undeclared (first use in this function)
                         ^

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000125480.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 1 warnings, 4 checks, 20 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000125480.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
